--- a/regression.htm
+++ b/regression.htm
@@ -9,8 +9,8 @@ canvas {
 
 </style>
 <canvas></canvas>
-<script src="libs/common.js"></script>
-<script src="libs/regression.min.js"></script>
+<script src="common.js"></script>
+<script src="regression.min.js"></script>
 <script>
 
 const canvas = document.querySelector('canvas');
