--- a/regression.htm
+++ b/regression.htm
@@ -9,6 +9,7 @@ canvas {
 
 </style>
 <canvas></canvas>
+<textarea id="output"></textarea>
 <script src="common.js"></script>
 <script src="regression.min.js"></script>
 <script>
@@ -43,17 +44,17 @@ function draw() {
 
         // Linear
         const linear = regression.linear(data);
-        console.log(`%cLinear ${linear.string}, r2 = ${linear.r2}`, 'color: #f33');
+        output(`%cLinear ${linear.string}, r2 = ${linear.r2}`, 'color: #f33');
         drawLine(x => linear.equation[0] * x + linear.equation[1], 'red');
 
         // Exponential
         const exponential = regression.exponential(data);
-        console.log(`%cExponential ${exponential.string}, r2 = ${exponential.r2}`, 'color: #3f3');
+        output(`%cExponential ${exponential.string}, r2 = ${exponential.r2}`, 'color: #3f3');
         drawLine(x => exponential.equation[0] * Math.exp(x * exponential.equation[1]), 'green');
 
         // Logarithmic
         const logarithmic = regression.logarithmic(data);
-        console.log(`%cLogarithmic ${logarithmic.string}, r2 = ${logarithmic.r2}`, 'color: #33f');
+        output(`%cLogarithmic ${logarithmic.string}, r2 = ${logarithmic.r2}`, 'color: #33f');
         drawLine(x => logarithmic.equation[0] + logarithmic.equation[1] * Math.log(x), 'blue');
 
         // Power
@@ -61,6 +62,10 @@ function draw() {
         // console.log(`%cPower ${power.string}, r2 = ${power.r2}`, 'color: #f3f');
         // drawLine(x => power.equation[0] * Math.pow(x, power.equation[1]), 'purple');
     }
+}
+    
+function output(s) {
+    document.querySelector('#output').innerText += s;
 }
 
 function drawPoint(p) {
